		* don't show any context menu in the presenter widget
		* use the full screen size in the dynamic presenter widget for worksheets with "use view size" property set to true
		* allow to zoom the view in the dynamic presenter widget
		* fix using custom value label with invalid data points in xy-curve (BUG 455214)
	* [spreadsheet] properly paste the data in the format 'yyyy-MM-dd hh:mm:ss' and similar
	* [fit] fix locale usage in evaluation range
	* [fit] correctly invalidate fit result when model changes


-----2.9.0 (03.05.2022) -----
	* [general]
		* Allow to copy&paste and to duplicate single objects in the project explorer
		* Allow to change the order of objects in the project explorer (move up and down)
		* Added global settings for numbers
		* Color maps manager allowing the access to multiple collections of color maps
		* Show git hash in about dialog for convenience
		* Use system liborigin when available
		* Open new project per default on startup
		* Examples Dialog - an easy way to browse through all available example projects and to open them directly in the application
		* Allow to save the project without the results of the calculations in the analysis curves to reduce the size of project file
		* Use XZ compression of project files per default with compatibility option for older versions of LabPlot
		* Improve preview resolution of distributions and fit functions
		* Add parser functions to generate non-uniform random numbers of several distributions
		* Fuzzy matching when doing search/filter in the Project Explorer
	* [analysis]
		* Support Mathieu functions via GSL
		* Support fitting of any distribution to a histogram
		* Added Hilbert transform including envelope
		* Improve entering ranges for various methods
	* [import]
		* Add Option to specify header line in ASCII data
		* Import SAS, Stata and SPSS files using readstat library
		* Import MATLAB MAT files using matio library
		* Import LTspice files